[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameScns/UIScns/SkillUI/SkillUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art Src/Background/scene2_sky.png" type="Texture" id=2]
[ext_resource path="res://GameScns/StaticScns/bgGround.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameScns/PlayerScns/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameScns/BossScns/ZhuRong.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameScns/UIScns/BossUI/BossUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://LevelScripts/World2.gd" type="Script" id=8]
[ext_resource path="res://Art Src/Background/mountains2.png" type="Texture" id=9]
[ext_resource path="res://SoundEffects/62. Fire Giant.mp3" type="AudioStream" id=10]
[ext_resource path="res://SoundEffects/zr_second_phase_bgm.wav" type="AudioStream" id=11]

[node name="World2" type="YSort"]
z_index = -10
script = ExtResource( 8 )

[node name="Node2D" type="Node2D" parent="."]
z_index = -20
z_as_relative = false

[node name="skybg" type="TextureRect" parent="Node2D"]
margin_left = -19.0
margin_top = -14.0
margin_right = 1005.0
margin_bottom = 562.0
rect_scale = Vector2( 1.06509, 1.06509 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgGround" parent="Node2D/skybg" instance=ExtResource( 3 )]
position = Vector2( 484.466, 323.916 )
scale = Vector2( 1.00149, 1.00149 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 213, 468 )
z_index = 3

[node name="ZhuRong" parent="." instance=ExtResource( 5 )]
position = Vector2( 548, 209 )
scale = Vector2( 0.575432, 0.575432 )

[node name="CanvasLayer1" type="CanvasLayer" parent="."]

[node name="BossUI" parent="CanvasLayer1" instance=ExtResource( 6 )]
margin_left = 299.0
margin_top = 547.0
margin_right = 832.0
margin_bottom = 627.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="SkillUI" parent="CanvasLayer2" instance=ExtResource( 1 )]
margin_left = 792.0
margin_top = 383.0
margin_right = 792.0
margin_bottom = 383.0
rect_scale = Vector2( 0.399065, 0.399065 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
process_priority = 11
layer = 50

[node name="HealthUI" parent="CanvasLayer3" instance=ExtResource( 7 )]
margin_left = 11.0
margin_top = 5.0
margin_right = 444.0
margin_bottom = 70.0

[node name="ProgressBar" parent="CanvasLayer3/HealthUI" index="2"]
margin_right = 343.0
margin_bottom = 49.0

[node name="HP" parent="CanvasLayer3/HealthUI/ProgressBar" index="0"]
texture = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 34.0
margin_right = 1048.0
margin_bottom = 631.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -22.0

[node name="BGM1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[editable path="CanvasLayer3/HealthUI"]
